@@ -77,7 +77,7 @@ public abstract class Tuple2D extends Tuple1D
 	 */
 	public double length()
 	{
-		return Math.sqrt(squareLength());
+		return RMath.getVectorLength(x, y);
 	}
 
 	/**
@@ -86,16 +86,16 @@ public abstract class Tuple2D extends Tuple1D
 	 */
 	public double squareLength()
 	{
-		return x*x + y*y;
+		return RMath.getVectorLengthSquared(x, y);
 	}
 
 	/**
 	 * Yields the dot product of a Tuple2D with this one.
-	 * @param t		the tuple to use with this one.
+	 * @param v		the tuple to use with this one.
 	 */
-	public double dot(Tuple2D t)
+	public double dot(Tuple2D v)
 	{
-		return x*t.x + y*t.y;
+		return RMath.getVectorDotProduct(x, y, v.x, v.y);
 	}
 
 	/**
